welcome.lessons.welcome.variables.Variables.scala.error
Variables:9: error: '(' expected but identifier found.
if estSurBiscuit() {
   ^